# is_openable_pdf

./: Cargo.toml  Makefile  README.md  biome.json  package-lock.json  package.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
src/: core.rs  index.test.ts  index.ts  lib.rs
tests/: integration_test.rs
