[package]
edition = "2024"
name = "is_openable_pdf"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = {version = "0.3.3", default-features = false, features = [
  "wasm_js",
]}
lopdf = {version = "0.36.0", default-features = false}
wasm-bindgen = "0.2.100"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
